Покидал тезисов в аннотацию

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -1,5 +1,40 @@
 \anonsection{Аннотация}
 
+
+---
+
+Актуальность: облака везде, облака нужны всем, не только бизнес-клиентам, но и обычным людям.
+
+Т.к. популярность облаков появилась сравнительно недавно и она стремительно развивается, не всегда успевают учесть все аспекты безопасности.
+
+Также из-за того, что облако состоит из большого количества ПО на различных уровнях, нужно учитывать все уязвимости, так как они могут всплыть на каждом из уровней.
+
+Мысли:
+
+* клиенты слабо представляют насколько защищены облака, поэтому предпочитают частное облаков, взамен публичного, не доверяют провайдеру
+
+* основные аспекты облаков: мониторинг, управление, безопасность, доступность
+
+* если надо добавить часть по экономике - файл 124.pdf
+
+* по поводу иаас, преимущества понятны, а вот минусы в том, что если получают доступ к хост-ноде, то все, также это может быть изнутри, например уязвимость на гипервизоре
+
+* конкретные проблемы с табличками описаны тут 1608.08787v1.pdf
+
+* файл cloud-security-study-report.pdf конкретный отчет сравнение использования облаков в 2016 году по сравнению с 2014
+
+* в файле informatsionnaya-bezopasnost-pri-oblachnyh-vychisleniyah-problemy-i-perspektivy.pdf хорошо расписан вопрос по стандартизации облаков, также кратко написано про риски использования облаков
+
+* тут тоже про стандарты psta2011-4-17-31.pdf
+
+* в файле str50.pdf рассказывакется про проблемы в России, проблемы с точки зрения инф. безопасности
+
+* реальные опросы от интела 2012г, которые рассказывают, что препятствуют уходу в облака, файл whats-holding-back-the-cloud-peer-research-report.pdf
+
+* хорошая презентация Zegzhda-PD-supernova-2.pdf краткие тезисы, примеры картинок, модель безопасности даже есть
+
+---
+
 В данной выпускной квалификационной работе рассмотрены ...
 
 Ключевые слова: 1, 2, 3, 4, 5.
