--- a/preamble.tex
+++ b/preamble.tex
@@ -103,7 +103,7 @@
 \setlength{\headheight}{17pt}
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
-\fancypagestyle{plain}{ 
+\fancypagestyle{plain}{
     \fancyhf{}
     \rhead{\thepage}
 }
@@ -113,7 +113,7 @@
 \DeclareCaptionLabelSeparator{defffis}{ -- } % Разделитель
 \captionsetup[figure]{justification=centering, labelsep=defffis, format=plain} % Подпись рисунка по центру
 \captionsetup[table]{justification=raggedright, labelsep=defffis, format=plain, singlelinecheck=false} % Подпись таблицы слева
-\addto\captionsrussian{\renewcommand{\figurename}{Рис.}} % Имя фигуры
+\addto\captionsrussian{\renewcommand{\figurename}{Рисунок}} % Имя фигуры
 
 % Пользовательские функции
 \newcommand{\addimg}[4]{ % Добавление одного рисунка
