--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 % https://github.com/Amet13/master-thesis
 
 \documentclass[a4paper,14pt]{extarticle} % 14й шрифт
-\input{inc/preamble} % Подключаем преамбулу
+\input{preamble} % Подключаем преамбулу
 
 %%% Начало документа
 \begin{document}
@@ -35,7 +35,7 @@
 \includepdf[pages={1,2}]{task} % Задание на диплом печатается на одном листе с двух сторон
 %помимо ПЗ и задания, в диплом также вкладывается отзыв руководителя и рецензия
 
-\input{inc/0-annotation} % Аннотация
+\input{inc/0-annotation} % Аннотация НЕ ВКЛЮЧАЕТСЯ В СОДЕРЖАНИЕ!!!! ВОЗМОЖНО ЕЕ СВЕРСТАТЬ В ЛАТЕХЕ И СОЕДИНИТЬ КАК ПДФ НАДО
 
 \tableofcontents % Содержание 
 \clearpage
