Тезисы по литературным источникам

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -1,5 +1,13 @@
 \anonsection{Аннотация}
 
+В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности облачных технологий.
+Для достижения поставленной цели был необходим детальный анализ мировых стандартов безопасности для облачных провайдеров, а также практический пентестинг облачных систем с целью эксплуатации наиболее опасных уязвимостей.
+
+Тема выпускной квалификационной работы --- <<Исследование проблем безопасности облачных технологий>>.
+
+Ключевые слова: безопасность, облачные вычисления, виртуализация, уязвимости, защита информации, стандартизация.
+
+Актуальность темы. 
 
 ---
 
