--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -1,5 +1,28 @@
 \section{Обзор литературных источников по тематике исследования} \label{literature}
 
+
+* что такое облака
+
+* сравнение облаков 2014/16 тут графики
+
+* технологии облачных вычислений soa/asp/virt... тут картинки
+
+* saas/paas/iaas тут картинка
+
+* гибрдное/публ/прив облако тут картинка
+
+* стандартизация nist... тут можно табличку
+
+* облачные провайдеры тут табличка/картинка
+
+* специфика облаков в России
+
+* тенденции развития облаков в мире (зеленые цоды, уход в виртуализированные хранилища и сети) пример картинки какой-то
+
+* кратко по безопасности, основные пункты, кем регламентируется, как обеспечивается
+
 Тут 10-20 страниц, без подпунктов, сплошной текст с картиночками, в общем теория.
+
+* конкретный упор на безопасность уже в описании работы
 
 \clearpage
