--- a/preamble.tex
+++ b/preamble.tex
@@ -46,7 +46,7 @@
     colorlinks, urlcolor={black}, % Все ссылки черного цвета, кликабельные
     linkcolor={black}, citecolor={black}, filecolor={black},
     pdfauthor={Амет Умеров},
-    pdftitle={НАЗВАНИЕ ТЕМЫ ДИПЛОМА}
+    pdftitle={Исследование проблем безопасности облачных технологий}
 }
 
 % Оформление библиографии и подрисуночных записей через точку
