Выделил основные моменты практической части

--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -4,4 +4,85 @@
 
 Все это должно быть с подпунктами.
 
+почему именно linux и эти платформы?
+нужно собрать статистику использования дистрибутивов на серверах, а также платформ виртуализации
+возможно конкретно по россии эту цифру найти?
+
+Уязвимости 2016, это нужно эксплуатировать
+
+* Linux kernel, CentOS/RHEL/buntu/Debian Dirty COW
+
+* Виртуализация: KVM/Xen/LXC/OpenVZ/Virtuozzo/VMWare/Hyper-V
+
+* Протоколы: NTP/SSL/TLS/HTTP2 DROWN/POODLE/HEARTBLEED TCP overflow libc GHOST
+
+* mysql cve-2016-3477
+
+чтобы не ребутаться использовать kernelcare/kpatch, постоянно мониторинг уязвимостей
+
+использовать lts дистрибутивы для поддержки софта
+
+пример уязвимостей по kvm: http://www.cvedetails.com/
+
+ntp - только на винде позволяет устроить ддос
+
+есть drown до этого еще poodle и heartbleed, это все уязвимости openssl, после этого появился libressl - она сложна в реализации http://www.opennet.ru/opennews/art.shtml?num=43971
+
+нашумевшие еще это ghost, shellshock, CVE-2016-6663 (mysql)
+--- конкретно
+
++ Linux kernel DIrty COW: CVE-2016-5195 http://www.opennet.ru/opennews/art.shtml?num=45354
+получить рута можно
+
++ Xen CVE-2016-6258 http://www.opennet.ru/opennews/art.shtml?num=44855
+выполнение произвольного кода на хост-ноде
+
++ TCP CVE-2016-5696 http://www.opennet.ru/opennews/art.shtml?num=44945
+возможность обрыва tcp-соединения и подстановки данных в трафик
+
+- glibc CVE-2015-7547 http://opennet.ru/opennews/art.shtml?num=43886
+ее вряд ли можно эксплуатировать
+
++ xen CVE-2016-3710 http://www.opennet.ru/opennews/art.shtml?num=44409
+работает только в hvm, выполнение кода на хост-ноде из гостевой
+
++ linux kernel CVE-2016-8655 http://www.opennet.ru/opennews/art.shtml?num=45632
+тут возможно выйти за пределы lxc скорее всего
+
+---
+
+Тестовый стенд для всего этого.
+лучше конечно это был бы дедик, но на крайняк kvm + nestedV
+
+если все это можно эксплуатировать, то что делать?
+
+* мониторинг
+
+* если это что-то ядерное, то надо ребутать, так не пойдет, нужны патчи налету
+
+* использование встроенных механизмов защиты selinux/apparmor
+
+если связать это с опенсорсом, то
+
+1. все источники уязвимостей из открытых данных
+
+2. эксплуатация уязвимостей тоже осуществляется с помощью свободного ПО
+
+3. если это мониторинг, то скорее всего он тоже опенсорсный, но надо поискать если ли коммерческие альтернативы
+
+Поискать скрипты, которые могут по открытым базам чекать уязвимости.
+Эту возможность можно запихнуть в мониторинг.
+
+
+Дальше.
+Обзор наших провайдеров.
+Какие требования к ним предъявляются и как они их выполняют.
+Тут надо собрать стату по популярным облачным ребятам, почитать SLA и триальную услугу попробовать.
+
+Если же речь идет не только об уязвимостях, но например еще о ддос, то тут помимо очевидного варианта атаки на инфраструктуру может быть, что в облаке клиента может быть зараза и это исходящий ддос.
+Это надо тоже как-то мониторить, решать это можно либо заблокировав клиента, либо если это легитимный трафик, то что-то делать с сетью.
+
+Также в безопасность входят бекапы, фейловеры, все что соответствует SLA.
+Тут возможно сделать что-то с SDN и SDS, надо почитать.
+
 \clearpage
