Добавил аннотацию и введение

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -1,56 +1,19 @@
 \anonsection{Аннотация}
 
-В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности облачных технологий.
-Для достижения поставленной цели был необходим детальный анализ мировых стандартов безопасности для облачных провайдеров, а также практический пентестинг облачных систем с целью эксплуатации наиболее опасных уязвимостей.
-
-Тема выпускной квалификационной работы --- <<Исследование проблем безопасности облачных технологий>>.
+Тема выпускной квалификационной работы магистра --- <<Исследование проблем безопасности облачных технологий>>.
 
 Ключевые слова: безопасность, облачные вычисления, виртуализация, уязвимости, защита информации, стандартизация.
 
-Актуальность темы. 
+В данной выпускной квалификационной работе магистра рассмотрены проблемы обеспечения безопасности облачных технологий.
+Для достижения поставленной цели был необходим детальный анализ мировых стандартов безопасности для облачных провайдеров, а также практический пентестинг облачных систем с целью эксплуатации наиболее опасных уязвимостей.
 
----
+Актуальность темы.
+В настоящее время наблюдается стремительное развитие облачных технологий, однако для эффективной работы облачной инфраструктуры требуется эффективная структура и организация.
+Зачастую небольшая команда, проектирующая инфраструктуру облака не всегда может полностью учесть все аспекты безопасности, так как нет единого документа, стандартизующего механизмы обеспечения безопасности.
+Особенно остро, вопрос безопасности встал в последнее время, в связи с обнаружением большого количества опасных уязвимостей в программном обеспечении, используемом для облаков.
 
-Актуальность: облака везде, облака нужны всем, не только бизнес-клиентам, но и обычным людям.
+Конечная цель проектирования --- анализ проблем безопасности в облачных технологиях, а также практический пример эксплуатации опасной уязвимости в данной среде.
 
-Т.к. популярность облаков появилась сравнительно недавно и она стремительно развивается, не всегда успевают учесть все аспекты безопасности.
-
-Также из-за того, что облако состоит из большого количества ПО на различных уровнях, нужно учитывать все уязвимости, так как они могут всплыть на каждом из уровней.
-
-Мысли:
-
-* клиенты слабо представляют насколько защищены облака, поэтому предпочитают частное облаков, взамен публичного, не доверяют провайдеру
-
-* основные аспекты облаков: мониторинг, управление, безопасность, доступность
-
-* если надо добавить часть по экономике - файл 124.pdf
-
-* по поводу иаас, преимущества понятны, а вот минусы в том, что если получают доступ к хост-ноде, то все, также это может быть изнутри, например уязвимость на гипервизоре
-
-* конкретные проблемы с табличками описаны тут 1608.08787v1.pdf
-
-* файл cloud-security-study-report.pdf конкретный отчет сравнение использования облаков в 2016 году по сравнению с 2014
-
-* в файле informatsionnaya-bezopasnost-pri-oblachnyh-vychisleniyah-problemy-i-perspektivy.pdf хорошо расписан вопрос по стандартизации облаков, также кратко написано про риски использования облаков
-
-* тут тоже про стандарты psta2011-4-17-31.pdf
-
-* в файле str50.pdf рассказывакется про проблемы в России, проблемы с точки зрения инф. безопасности
-
-* реальные опросы от интела 2012г, которые рассказывают, что препятствуют уходу в облака, файл whats-holding-back-the-cloud-peer-research-report.pdf
-
-* хорошая презентация Zegzhda-PD-supernova-2.pdf краткие тезисы, примеры картинок, модель безопасности даже есть
-
----
-
-В данной выпускной квалификационной работе рассмотрены ...
-
-Ключевые слова: 1, 2, 3, 4, 5.
-
-Актуальность темы. Блаблабла.
-
-Конечная цель проектирования тратата.
-
-Выпускная квалификационная работа магистра изложена на 100500 листах, включает 1000 таблиц, 200 рисунков, 1 приложение, 19 литературных источников.
+Выпускная квалификационная работа магистра изложена на ??? листах, включает ??? таблиц, ??? рисунков, ??? приложений, ??? литературных источников.
 
 \clearpage
