--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -2,12 +2,12 @@
 \renewcommand{\section}[2]{\anonsection{Библиографический список}}
 \begin{thebibliography}{00}
 
-\bibitem{xz-chto}
-    Тут где-то 2-3 страницы
-    [Электронный ресурс] //
-    Россия
-    URL: http://ya.ru
-    (дата обращения: 01.01.2000)
+\bibitem{telecom-world}
+    Прудникова, А.А.
+    Безопасность облачных вычислений /
+    А.А. Прудникова //
+    Мир телекома. -- 2013. - №1.
+    -- С.50-55.
 
 \end{thebibliography}
 \endgroup
