--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -1,7 +1,9 @@
 \anonsection{Перечень сокращений и условных обозначений}
 
-Это глоссарий
+ЦОД --- центр обработки данных
 
-1 страница
+ПО --- программное обеспечение
+
+
 
 \clearpage
