Черновой вариант постановки задачи

--- a/inc/0-annotation.tex
+++ b/inc/0-annotation.tex
@@ -1,4 +1,4 @@
-\anonsection{Аннотация}
+\annotation{Аннотация}
 
 Тема выпускной квалификационной работы магистра --- <<Исследование проблем безопасности облачных технологий>>.
 
