--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -9,6 +9,21 @@
     Мир телекома. -- 2013. - №1.
     -- С.50-55.
 
+\bibitem{sys-analyz}
+    Методические указания <<Процедура системного анализа при проектировании программных систем>>
+    для студентов-дипломников дневной и заочной формы обучения специальности 7.091501 /
+    Сост.: Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
+    Изд-во СевНТУ, 2005. -- 32с.
+
+\bibitem{var-analyz}
+    Методические указания к расчетно-графическому заданию
+    на тему <<Метод анализа иерархий>>  по диcциплине <<Теория оптимальных решений>>
+    для студентов специальности 7.091501 <<Компьютерные системы и сети>>
+    дневной и заочной формы обучения /
+    Сост.: Ю.Н. Щепин -- Севастополь:
+    Изд-во СевНТУ, 2008. -- 28с.
+
+
 \end{thebibliography}
 \endgroup
 
