--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -4,6 +4,13 @@
 
 ПО --- программное обеспечение
 
+GNU --- проект по разработке свободного программного обеспечения
+
+GPL --- General Public License, универсальная общественная лицензия
+
+ОЗУ --- оперативное запоминающее устройство
+
+SSD --- Solid State Drive, твердотельный накопитель
 
 
 \clearpage
