--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -12,7 +12,7 @@
 \begin{itemize}
   \item снижение затрат --- отсутствие необходимости покупки собственного оборудования, программного обеспечения (ПО), работы системного инженера;
   \item удаленный доступ --- возможность доступа к данным облака из любой точки мира, где есть доступ в глобальную сеть;
-  \item отказоустойчивость и масштабируемость --- увеличение или уменьшение необходимых ресурсов в зависимости от потребности проекта, техническое обслуживание оборудования лежит на плечах облачного провайдера.
+  \item отказоустойчивость и масштабируемость --- изменение необходимых ресурсов в зависимости от потребности проекта, техническое обслуживание оборудования лежит на плечах облачного провайдера.
 \end{itemize}
 
 В связи с этим можно сделать вывод, что основные недостатки облачных вычислений сводятся к информационной безопасности.
