--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -1,5 +1,43 @@
 \section{Постановка задачи}
 
-Тут только 2 страницы текста
+Конечной задачей выпускной квалификационной работы магистра на тему <<Исследование проблем безопасности облачных вычислений>> является подробный анализ стандартов безопасности облачных вычислений, варианты решения данных проблем, а также технические возможности практической эксплуатации уязвимостей на нескольких уровнях работы облачной инфраструктуры.
+
+Исследования должны состоять из следующих частей:
+\begin{itemize}
+  \item составные части облачной инфраструктуры;
+  \item анализ технологий используемых облачными провайдерами, необходимых для построения облачной инфраструктуры;
+  \item специфика применений облачных вычислений в России;
+  \item проблемы безопасности облачных вычислений;
+  \item решение проблем безопасности облаков;
+  \item практическое применение уязвимостей в облачной среде, с использованием программ, распространяющихся под свободными лицензиями, например GNU GPL.
+\end{itemize}
+
+Для применения практических навыков исследования уязвимостей необходима аппаратная платформа со следующими характеристиками:
+\begin{itemize}
+  \item процессор 4xIntel Core\textregistered~i3 @ 2.3GHz с поддержкой аппаратной виртуализации;
+  \item минимальный объем ОЗУ 8 Гб, рекомендуемый --- не менее 10 Гб;
+  \item минимум 15 Гб места на жестком диске (SSD);
+  \item операционная система Ubuntu 16.04,CentOS 7 или Debian 8 GNU/Linux.
+\end{itemize}
+
+Данная задача также рассматривается с точки зрения системного и вариантного анализа.
+
+Системный анализ включает в себя: \cite{sys-analyz}
+\begin{itemize}
+  \item системотехническое представление системы безопасности в виде <<черного ящика>>;
+  \item описание входных и выходных данных;
+  \item список функций, которые выполняет система безопасности;
+  \item учет случайностей;
+  \item декомпозицию системы и описание связей между ее элементами.
+\end{itemize}
+
+Вариантный анализ произведен исходя выбранных критериев: \cite{var-analyz}
+\begin{itemize}
+  \item раз;
+  \item два;
+  \item три;
+  \item ...;
+  \item последний критерий.
+\end{itemize}
 
 \clearpage
