--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -36,6 +36,8 @@
 
 
 \addimghere{aas}{1}{Тестовая картиночка}{aas}
+\addimghere{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
+\addimghere{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
 
 * что такое облака
 
