--- a/main.tex
+++ b/main.tex
@@ -29,13 +29,15 @@
 Приложение А ...
 Приложение Б ...
 ~85 страниц без приложений, вместе с ними под 100стр
+
+СИСТЕМНЫЙ И ВАРИАНТНЫЙ АНАЛИЗ ДЕЛАЕМ В ПОСЛЕДНЮЮ ОЧЕРЕДЬ
 \fi
 
-\includepdf{pz} % Пояснительная записка
-\includepdf[pages={1,2}]{task} % Задание на диплом печатается на одном листе с двух сторон
+%\includepdf{pz} % Пояснительная записка
+%\includepdf[pages={1,2}]{task} % Задание на диплом печатается на одном листе с двух сторон
 %помимо ПЗ и задания, в диплом также вкладывается отзыв руководителя и рецензия
 
-\input{inc/0-annotation} % Аннотация НЕ ВКЛЮЧАЕТСЯ В СОДЕРЖАНИЕ!!!! ВОЗМОЖНО ЕЕ СВЕРСТАТЬ В ЛАТЕХЕ И СОЕДИНИТЬ КАК ПДФ НАДО
+\input{inc/0-annotation} % Аннотация
 
 \tableofcontents % Содержание 
 \clearpage
@@ -43,8 +45,8 @@
 \input{inc/0-intro} % Введение
 \input{inc/1-pz} % Постановка задачи
 \input{inc/2-literature} % Обзор литературных источников по тематике исследования
-\input{inc/3-sysanalyz} % Системный анализ
-\input{inc/4-varanalyz} % Вариантный анализ
+%\input{inc/3-sysanalyz} % Системный анализ
+%\input{inc/4-varanalyz} % Вариантный анализ
 \input{inc/5-description} % ОПИСАНИЕ РАБОТЫ, ПОКА ХЗ ЧТО ТУТ
 \input{inc/6-results} % Анализ полученных результатов
 \input{inc/0-conclusion} % Заключение
@@ -53,8 +55,8 @@
 \input{inc/0-illustrations} % Список иллюстративного материала
 
 % Приложения
-\input{inc/a-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 1
-\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
+%\input{inc/a-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 1
+%\input{inc/b-app} % НАЗВАНИЕ ПРИЛОЖЕНИЯ 2
 
 \end{document}
 %%% Конец документа
