Информация по облакам и развитию за последние 2 года

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -23,6 +23,15 @@
     Сост.: Ю.Н. Щепин -- Севастополь:
     Изд-во СевНТУ, 2008. -- 28с.
 
+\bibitem{nist}
+    Hogan, M., Liu, F., Sokol, A., Tong, J.
+    NIST Cloud Computing Standarts Roadmap /
+    NIST Special Publication 500-291, Version 2
+    Roadmap Working Group, 2013. -- 113p.
+
+\bibitem{gemalto}
+    The 2016 Global Cloud Data Security Study.
+    Ponemon Insitute LLC, 2016. -- 40p.
 
 \end{thebibliography}
 \endgroup
