--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -1,5 +1,76 @@
 \section{Обзор литературных источников по тематике исследования} \label{literature}
 
+Исторически, ситуация сложилась так, что слово <<облако>> используется в качестве метафоры сети Интернет.
+Позже, оно было использовано для изображения Интернет в компьютерных сетевых диаграммах и схемах.
+
+Облачные вычисления можно обозначить, как выделение ресурсов в облаке.
+В соответствии с NIST (Национальный институт стандартов и технологий), формальное определение облачных вычислений заключается в следующем:
+<<Облачные вычисления являются моделью обеспечения повсеместного, удобного доступа по требованию по сети, общему пулу конфигурируемых вычислительных ресурсов (например сетей, серверов, систем хранения данных (СХД), приложений и услуг), которые могут быстро и с минимальными усилиями предоставлены для управления поставщиком услуг>>. \cite{nist}
+
+Согласно опросам института Понемона в 2016 году, среди 3476 респондентов в сфере информационной безопасности из Соединенных Штатов Америки, Великобритании, Австралии, Германии, Японии, Франции, Японии, России, Индии и Бразилии, 73\% респондентов так или иначе используют облачные вычисления в своей инфраструктуре.
+Особый рост внедрения облачных сервисов произошел в последние 2 года. \cite{gemalto}
+
+Хранение данных пользователей, почты и потребительских данных в облаке выросло в 2016 году по сравнению с 2014 годом.
+
+\addimghere{cloud-data}{1}{Сравнение использования облачных вычислений для хранения данных}{cloud-data}
+
+Провайдеры облачных услуг предлагают различные виды услуг, построенных поверх базового резервирования и освобождения ресурсов.
+Большинство из этих услуг попадают в одну из следующих категорий:
+\begin{itemize}
+  \item инфраструктура как услуга (IaaS);
+  \item платформа как услуга (PaaS);
+  \item программное обеспечение как услуга (SaaS).
+\end{itemize}
+
+\addimghere{aas}{1}{Модели обслуживания облака}{aas}
+
+Большинство провайдеров используют различные виды веб-интерфейса, на основе которого можно построить необходимый стек технологий.
+Облачные провайдеры используют модель <<pay-as-you-go>>, в которой оплата производится только за время использования ресурсов.
+
+Ключевыми функциями облачных вычислений являются:
+\begin{itemize}
+  \item скорость и масштабируемость, доступ к необходимым ресурсам можно получить одним щелчком мыши, что экономит время и обеспечивает гибкость, в зависимости от потребностей сервиса, можно легко масштабировать ресурсы как вверх, так и вниз;
+  \item стоимость, снижение первоначальных затрат на развертывание инфраструктуры позволяет сосредоточиться на приложениях и бизнесе, облачные провайдеры имеют возможность заранее оценить стоимость, что значительно облегчает планирование бюджета;
+  \item легкий доступ к ресурсам, пользователи могут получить доступ к инфраструктуре из любого места и устройства, до тех пор, пока существует подключение к провайдеру;
+  \item обслуживание, все работы по техническому обслуживанию ресурсов осуществляются поставщиком облачных услуг, пользователи не должны беспокоиться об этом;
+  \item мультиаренда, несколько пользователей могут использовать один и тот же пул доступных ресурсов;
+  \item надежность, ресурсы могут быть размещены в разных дата-центрах, для обеспечения повышенной надежности.
+\end{itemize}
+
+Как правило, облако может быть развернуто согласно следующим моделям:
+\begin{itemize}
+  \item частное облако;
+  \item публичное облако;
+  \item гибридное облако.
+\end{itemize}
+
+\addimghere{pub-priv-hybr}{1}{Модели развертывания облака}{pub-priv-hybr}
+
+Частное облако, эксплуатируется исключительно одной организацией, оно может быть размещено внутри или снаружи сети организации и управляться внутренними командами или третьей стороной.
+Частное облако можно построить с использованием такого программного обеспечения, как OpenStack;
+
+Публичное облако доступно для всех пользователей, любой может использовать его после предоставления данных кредитной карты.
+AWS (Amazon Web Services) и GCE (Google Compute Engine) являются примерами публичных облаков;
+
+Гибридное облако, является результатом объединения публичного и частных облаков.
+Гибридное облако может быть использовано для хранения секретной информации о частном облаке, предлагая при этом услуги на основе этой информации из публичного облака.
+
+В вычислениях, виртуализация является процессом создания виртуальной (не физической) версии чего-либо, в том числе аппаратных платформ виртуального компьютера, операционных систем, устройств хранения данных и вычислительных ресурсов.
+
+Виртуализация может быть предоставлена на различных аппаратных и программных уровнях, таких как центральный процессор, диск, память, файловые системы и прочее.
+Чаще всего виртуализация используется для создания виртуальных машин и эмуляции различного оборудования для последующей установки операционных систем (ОС) на них.
+
+Виртуальные машины создаются на основе гипервизора, который работает поверх операционной системы хост-компьютера (физического компьютера, не виртуального).
+С помощью гипервизора возможна эмуляция аппаратных средств, таких как процессор, диск, сеть, память, а также установка гостевых операционных систем на них.
+Возможно создание нескольких гостевых виртуальных машин с различными операционными системами на гипервизоре.
+Например, можно взять машину на Linux и установить ее на <<голое>> железо (bare-metal), и после настройки гипервизора возможно создание нескольких гостевых машин на Linux и Windows.
+
+На данный момент все современные процессоры поддерживают аппаратную виртуализацию, это необходимо для безопасного и эффективного обмена ресурсами между хост-системой и гостевыми системами.
+Большинство современных процессоров и гипервизоров также поддерживают вложенную виртуализацию, что позволяет создавать виртуальные машины внутри виртуальных машин.
+
+
+
+
 ---
 
 Актуальность: облака везде, облака нужны всем, не только бизнес-клиентам, но и обычным людям.
@@ -35,7 +106,7 @@
 ---
 
 
-\addimghere{aas}{1}{Тестовая картиночка}{aas}
+
 \addimghere{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
 \addimghere{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
 
