Составные части облаков

--- a/inc/0-glossary.tex
+++ b/inc/0-glossary.tex
@@ -28,4 +28,8 @@ GCE --- Google Compute Engine
 
 ОС --- операционная система
 
+SOA --- service-oriented architecture, сервис-ориентированная архитектура
+
+BPEL --- Business Process Execution Language, язык описания бизнес-процессов
+
 \clearpage
