--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -14,6 +14,43 @@
 
 \addimghere{cloud-data}{1}{Сравнение использования облачных вычислений для хранения данных}{cloud-data}
 
+Облачные вычисления являются результатом объединения большого количества технологий и связующего ПО для обеспечения ресурсов, необходимых для решения задачи, балансировки процессов, мониторинга, автоматизации и прочего.
+
+Основными отличиями облачного сервиса от классического являются:
+\begin{itemize}
+  \item виртуализация;
+  \item оркестратор;
+  \item список услуг;
+  \item портал самообслуживания;
+  \item система тарификации и выставления счетов (биллинг).
+\end{itemize}
+
+В вычислениях, виртуализация является процессом создания виртуальной (не физической) версии чего-либо, в том числе аппаратных платформ виртуального компьютера, операционных систем, устройств хранения данных и вычислительных ресурсов.
+
+Виртуализация может быть предоставлена на различных аппаратных и программных уровнях, таких как центральный процессор, диск, память, файловые системы и прочее.
+Чаще всего виртуализация используется для создания виртуальных машин и эмуляции различного оборудования для последующей установки операционных систем (ОС) на них.
+
+Виртуальные машины создаются на основе гипервизора, который работает поверх операционной системы хост-компьютера (физического компьютера, не виртуального).
+С помощью гипервизора возможна эмуляция аппаратных средств, таких как процессор, диск, сеть, память, а также установка гостевых операционных систем на них.
+Возможно создание нескольких гостевых виртуальных машин с различными операционными системами на гипервизоре.
+Например, можно взять машину на Linux и установить ее на <<голое>> железо (bare-metal), и после настройки гипервизора возможно создание нескольких гостевых машин на Linux и Windows.
+
+На данный момент все современные процессоры поддерживают аппаратную виртуализацию, это необходимо для безопасного и эффективного обмена ресурсами между хост-системой и гостевыми системами.
+Большинство современных процессоров и гипервизоров также поддерживают вложенную виртуализацию, что позволяет создавать виртуальные машины внутри виртуальных машин.
+
+Оркестратор является механизмом, выполняющий набор заданных операций по шаблону.
+В сервис-ориентированной архитектуре (SOA), оркестровка сервисов реализуется согласно стандарту BPEL (Business Process Execution Language).
+Это позволяет автоматизировать процессы создания услуг клиентов в облачной среде.
+
+Список услуг как предоставляется пользователю в виде шаблонов готовых тарифов на портале самообслуживания, однако существуют и так называемые <<конфигураторы>>, которые позволяют пользователю создать шаблон индивидуально.
+
+Портал самообслуживания является инструментом, с которым работает непосредственно пользователь.
+Именно на портале обслуживания размещается список услуг, доступных клиенту.
+
+Система тарификации и выставления счетов является необходимым механизмом для определения финансовых затрат пользователя в соответствии с затраченными ресурсами клиента.
+
+\addimghere{cloud-tech}{1}{Составные части облачных вычислений}{cloud-tech}
+
 Провайдеры облачных услуг предлагают различные виды услуг, построенных поверх базового резервирования и освобождения ресурсов.
 Большинство из этих услуг попадают в одну из следующих категорий:
 \begin{itemize}
@@ -55,18 +92,7 @@ AWS (Amazon Web Services) и GCE (Google Compute Engine) являются при
 Гибридное облако, является результатом объединения публичного и частных облаков.
 Гибридное облако может быть использовано для хранения секретной информации о частном облаке, предлагая при этом услуги на основе этой информации из публичного облака.
 
-В вычислениях, виртуализация является процессом создания виртуальной (не физической) версии чего-либо, в том числе аппаратных платформ виртуального компьютера, операционных систем, устройств хранения данных и вычислительных ресурсов.
 
-Виртуализация может быть предоставлена на различных аппаратных и программных уровнях, таких как центральный процессор, диск, память, файловые системы и прочее.
-Чаще всего виртуализация используется для создания виртуальных машин и эмуляции различного оборудования для последующей установки операционных систем (ОС) на них.
-
-Виртуальные машины создаются на основе гипервизора, который работает поверх операционной системы хост-компьютера (физического компьютера, не виртуального).
-С помощью гипервизора возможна эмуляция аппаратных средств, таких как процессор, диск, сеть, память, а также установка гостевых операционных систем на них.
-Возможно создание нескольких гостевых виртуальных машин с различными операционными системами на гипервизоре.
-Например, можно взять машину на Linux и установить ее на <<голое>> железо (bare-metal), и после настройки гипервизора возможно создание нескольких гостевых машин на Linux и Windows.
-
-На данный момент все современные процессоры поддерживают аппаратную виртуализацию, это необходимо для безопасного и эффективного обмена ресурсами между хост-системой и гостевыми системами.
-Большинство современных процессоров и гипервизоров также поддерживают вложенную виртуализацию, что позволяет создавать виртуальные машины внутри виртуальных машин.
 
 
 
@@ -110,15 +136,15 @@ AWS (Amazon Web Services) и GCE (Google Compute Engine) являются при
 \addimghere{gartner-providers}{1}{Тестовая картиночка}{gartner-providers}
 \addimghere{gartner-virt}{1}{Тестовая картиночка}{gartner-virt}
 
-* что такое облака
++ что такое облака
 
-* сравнение облаков 2014/16 тут графики
++ сравнение облаков 2014/16 тут графики
 
-* технологии облачных вычислений soa/asp/virt... тут картинки
++ технологии облачных вычислений soa/asp/virt... тут картинки
 
-* saas/paas/iaas тут картинка
++ saas/paas/iaas тут картинка
 
-* гибрдное/публ/прив облако тут картинка
++ гибрдное/публ/прив облако тут картинка
 
 * стандартизация nist... тут можно табличку
 
